# muse

./: .gitignore  Dockerfile  README.md
muse_ws/devel/: .catkin  local_setup.sh
muse_ws/devel/include/state_estimator/: RollPitch.h  RollPitchStamped.h
muse_ws/devel/include/state_estimator_msgs/: FeetJacobians.h  ForwardKinematics.h  JointStateWithAcceleration.h  actuatorForces.h  attitude.h  getActiveEstimators.h  getActiveEstimatorsRequest.h  getActiveEstimatorsResponse.h  getBlacklist.h  getBlacklistRequest.h  getBlacklistResponse.h  getEstimatorDescription.h  getEstimatorDescriptionRequest.h  getEstimatorDescriptionResponse.h  getWhitelist.h  getWhitelistRequest.h  getWhitelistResponse.h  imu.h  jointState.h  leg_odometry.h  listAllEstimators.h  listAllEstimatorsRequest.h  listAllEstimatorsResponse.h  pauseEstimator.h  pauseEstimatorRequest.h  pauseEstimatorResponse.h  rawSensors.h  resetEstimator.h  resetEstimatorRequest.h  resetEstimatorResponse.h  restartEstimator.h  restartEstimatorRequest.h  restartEstimatorResponse.h  resumeEstimator.h  resumeEstimatorRequest.h  resumeEstimatorResponse.h  sensor_fusion.h  slip_detection.h  startEstimator.h  startEstimatorRequest.h  (+5 more)
muse_ws/devel/lib/pkgconfig/: iit_commons.pc  state_estimator.pc  state_estimator_msgs.pc
muse_ws/devel/lib/python3/dist-packages/state_estimator/msg/: _RollPitch.py  _RollPitchStamped.py  __init__.py
muse_ws/devel/lib/python3/dist-packages/state_estimator_msgs/msg/: _FeetJacobians.py  _ForwardKinematics.py  _JointStateWithAcceleration.py  __init__.py  _actuatorForces.py  _attitude.py  _imu.py  _jointState.py  _leg_odometry.py  _rawSensors.py  _sensor_fusion.py  _slip_detection.py  _timeSync.py
muse_ws/devel/lib/python3/dist-packages/state_estimator_msgs/srv/: __init__.py  _getActiveEstimators.py  _getBlacklist.py  _getEstimatorDescription.py  _getWhitelist.py  _listAllEstimators.py  _pauseEstimator.py  _resetEstimator.py  _restartEstimator.py  _resumeEstimator.py  _startEstimator.py  _stopEstimator.py
muse_ws/devel/lib/state_estimator/: node
muse_ws/devel/share/common-lisp/ros/state_estimator/msg/: RollPitch.lisp  RollPitchStamped.lisp  _package.lisp  _package_RollPitch.lisp  _package_RollPitchStamped.lisp  state_estimator-msg.asd
muse_ws/devel/share/common-lisp/ros/state_estimator_msgs/msg/: FeetJacobians.lisp  ForwardKinematics.lisp  (+24 more)
muse_ws/devel/share/iit_commons/cmake/: iit_commonsConfig.cmake
muse_ws/devel/share/roseus/ros/state_estimator/: manifest.l
muse_ws/devel/share/roseus/ros/state_estimator_msgs/: manifest.l
muse_ws/devel/share/state_estimator/cmake/: state_estimator-msg-extras.cmake  state_estimator-msg-paths.cmake  state_estimatorConfig.cmake
muse_ws/devel/share/state_estimator_msgs/cmake/: state_estimator_msgs-msg-paths.cmake  state_estimator_msgsConfig.cmake
muse_ws/src/iit_commons/: .gitlab-ci.yml  CMakeLists.txt  euler_angles.cmake  package.xml  yaml_config.cmake
muse_ws/src/iit_commons/include/iit/commons/: control.h  eigen_matrix_utils.h  filters.h  four_bar_linkage.h  hydraulics.h
muse_ws/src/iit_commons/include/iit/commons/SL/: eigen_conversion.h  generic_dynamics.h  joint_status_conversion.h  rbd_conversion.h
muse_ws/src/iit_commons/include/iit/commons/control/: VirtualModel.hpp
muse_ws/src/iit_commons/include/iit/commons/dog/: body_lengths.h  declarations.h  dog.hpp  feet_contact_forces.h  feet_jacobians.h  forward_kinematics.h  inertia_properties.h  inverse_dynamics.h  inverse_kinematics.h  joint_bool_map.h  joint_data_map.h  joint_id_tricks.h  jsim.h  kin_dyn_params.h  leg_bool_map.h  leg_data_map.h  link_data_map.h  robot_limits.h  shin_jacobians.h  test_fk.h  test_k.h  transforms.h
muse_ws/src/iit_commons/include/iit/commons/euler_angles/: common.h  eigen_traits.h  transform.h  transforms_internal.h
muse_ws/src/iit_commons/include/iit/commons/geometry/: algebra.h  polygon.h  rotations.h
muse_ws/src/iit_commons/include/iit/commons/planning/: planning.h
muse_ws/src/iit_commons/include/iit/commons/yaml_config/: yaml_config.h
muse_ws/src/iit_commons/src/: algebra_test.cpp  hydraulics.cpp  legboolmap_test.cpp  planning.cpp  planning_test.cpp  rotation_test.cpp  test-filters.cpp
muse_ws/src/iit_commons/src/control/: VirtualModel.cpp  testVirtualModel.cpp
muse_ws/src/iit_commons/src/euler_angles/: example.cpp  transforms_internal.cpp
muse_ws/src/iit_commons/src/fbl/: four_bar_linkage.cpp
muse_ws/src/iit_commons/src/yaml_config/: example.cpp  example.yaml  yaml_config.cpp
muse_ws/src/state_estimator/: CMakeLists.txt  package.xml  plugins.xml  state_estimator_plugins.xml  state_estimator_tools.xml
muse_ws/src/state_estimator/config/: attitude_plugin.yaml  contact_plugin.yaml  leg_odometry.yaml  sensor_fusion.yaml
muse_ws/src/state_estimator/include/state_estimator/: Estimator.hpp  Robot.hpp  Services.hpp  lib.hpp  plugin.hpp  plugin_base.hpp  state_estimator_node.hpp
muse_ws/src/state_estimator/include/state_estimator/Models/: attitude_bias_NLO.hpp  attitude_bias_XKF.hpp  leg_odometry.hpp  sensor_fusion.hpp
muse_ws/src/state_estimator/include/state_estimator/Observers/: EKF.hpp  NLO.hpp  Observer.hpp  XKF.hpp
muse_ws/src/state_estimator/launch/: pluginlist.yaml  state_estimator.launch  timeout.yaml
muse_ws/src/state_estimator/msg/: ContactGazebo.msg  RollPitchStamped.msg
muse_ws/src/state_estimator/src/: state_estimator.cpp  state_estimator_node.cpp
muse_ws/src/state_estimator/src/Models/: sensor_fusion.cpp
muse_ws/src/state_estimator/src/plugins/: attitude_estimation_plugin.cpp  contact_detection_plugin.cpp  leg_odometry_plugin.cpp  sensor_fusion_plugin.cpp
muse_ws/src/state_estimator_msgs/: CMakeLists.txt  package.xml
muse_ws/src/state_estimator_msgs/msg/: ContactDetection.msg  FeetJacobians.msg  ForwardKinematics.msg  JointStateWithAcceleration.msg  LegOdometry.msg  RollPitchYaw.msg  actuatorForces.msg  ang_vel.msg  attitude.msg  imu.msg  jointState.msg  leg_odometry.msg  newPlugin.msg  rawSensors.msg  sensor_fusion.msg  slip_detection.msg
muse_ws/src/state_estimator_msgs/srv/: getEstimatorDescription.srv
(+69 files in other folders)
