<package format="2">
  <name>iit_commons</name>
  <version>1.0.0</version>
  <description>
        iit-commons.
  </description>
  <maintainer email="gennaro.raiola@iit.it">Gennaro Raiola</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>

</package>
