<?xml version="1.0"?>
<package format="2">
  <name>state_estimator</name>
  <version>0.0.1</version>
  <description>The state_estimator package</description>

  <maintainer email="geoff.fink@iit.it">Geoff Fink</maintainer>

  <license>TODO</license>

  <author email="geoff.fink@iit.it">Geoff Fink</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>iit_commons</depend>
  <depend>message_generation</depend>
  <depend>state_estimator_msgs</depend>
  <build_depend>pinocchio</build_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>
    <state_estimator plugin="${prefix}/state_estimator_plugins.xml" />
    <state_estimator plugin="${prefix}/state_estimator_tools.xml" />  
</export>
  


</package>
